--- a/wireframe-domi.html
+++ b/wireframe-domi.html
@@ -8,6 +8,7 @@
 
 		* {
 			margin: 0px auto;
+			font-family: "helvetica";
 		}
 		
 		#header {
@@ -45,7 +46,7 @@
 		li a{
 			text-decoration: none;
 			color: #000;
-			font-family: "Helvetica";
+
 			font-size: 18px;
 		}
 
