--- a/wireframe-domi.html
+++ b/wireframe-domi.html
@@ -17,6 +17,10 @@
 			background-image: url("banner.jpg");
 		}
 
+		div {
+			padding: 40px 0px 40px 0px;
+		}
+
 		.right {
 			text-align: right;
 		}
@@ -50,6 +54,10 @@
 			font-size: 18px;
 		}
 
+		li:nth-child(1){
+			margin-left: 0px;
+		}
+
 		li a:hover {
 			color: red;
 			border-bottom: 1px solid red;
@@ -63,8 +71,8 @@
 			background: #ccc;
 		}
 
-		#skills {
-			padding-top: 80px;
+		hr {
+			width: 250px;
 		}
 
 	</style>
@@ -88,6 +96,8 @@
 
 		<div id="about">
 			<h1>About</h1>
+			<hr class="left">
+			<br>
 			<img src="pic2.png" alt="avatar" class="left" width="160px" height="120px">
 			<p class="right">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -100,6 +110,8 @@
 
 		<div id="skills">
 			<h1>Skills</h1>
+			<hr class="left">
+			<br>
 			<table>
 				<thead>
 					<tr>
@@ -126,6 +138,8 @@
 
 		<div id="portfolio">
 			<h1>Portfolio</h1>
+			<hr class="left">
+			<br>
 			<a href="#">
 				<img src="pic3.jpg" alt="pic3" width="150px" height="150px">
 			</a>
@@ -139,6 +153,8 @@
 
 		<div id="contact">
 			<h1>Contact</h1>
+			<hr class="left">
+			<br>
 			<address>
 				<p>E-Mail: Example@test.at</p>
 				<p>Tel: 0680/###########</p>
